@@ -30,7 +30,7 @@ requires:
   DateTime: 0
   Error::Pure: 0
   Mo: 0
-  Mo::utils: 0.21
+  Mo::utils: 0.28
   perl: 5.8.0
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Data-Login/issues
